--- a/family.html
+++ b/family.html
@@ -3,37 +3,48 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
+	<!-- Link to favicon -->
+	<link rel="icon" href="images/favicon.ico">
+	<!-- Link to CSS files -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
 <body>
+	<!-- Header -->
 	<header>
 		<nav>
-			<ol>
-				<li><a href = "index.html">About Me</a></li>
-				<li><a href = "family.html">My Family</a></li>
-				<li><a href = "random.html">Random Stuff</a></li>
-				<li><a href = "https://si.umich.edu">UMSI</a></li>
-			</ol>
+			<ul>
+				<!-- Maintain the class="active" on index.html for all three pages -->
+				<li class="active"><a href="index.html">About Me</a></li>
+				<li><a href="family.html">My Family</a></li>
+				<li><a href="random.html">Random Stuff</a></li>
+				<li><a href="https://si.umich.edu" target="_blank" rel="noopener noreferrer">UMSI</a></li>
+			</ul>
 		</nav>
+		<h1>Colleen van Lent</h1>
 	</header>
 
-	<h1>Family</h1>
-	
+	<!-- Main content -->
 	<main>
-		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-			<img src = "wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
-			<img src = "badlands.jpg" width="1000" alt = "">
-			<img src= "falling.jpg" width="25" alt = "">
-			<img src = "images/rushmore.jpg" width="1000" alt = "">
-			<img src = "jewel_cave.jpg" width="25" alt = "">
-		</p>
-		<p>I didn't plan for the fact that the Sturgis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
+		<h2>Family</h2>
+		<p>In 2016, I loaded my kids into the minivan and took them on a drive across the Northern Midwest states. We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
+
+		<!-- Image gallery -->
+		<div class="image-gallery">
+			<img src="images/wisconsin_dells.jpg" width="300" alt="A boy and two girls in zip line gear posing in front of a sign for Sasquatch Lake">
+			<img src="images/badlands.jpg" width="300" alt="View of the stunning rock formations in Badlands National Park">
+			<img src="images/falling.jpg" width="300" alt="Family standing near a waterfall">
+			<img src="images/rushmore.jpg" width="300" alt="View of Mount Rushmore in South Dakota">
+			<img src="images/jewel_cave.jpg" width="300" alt="Inside the Jewel Cave with breathtaking stalactites and stalagmites">
+		</div>
+
+		<p>I didn't plan for the fact that the Sturgis Motorcycle Rally would overlap with our trip. Many towns were closed to through traffic, and the lack of internet required that we use paper maps. Often.</p>
 	</main>
+
+	<!-- Footer -->
 	<footer>
-	<p>Colleen van Lent &copy; 2024</p>
+		<p>Colleen van Lent &copy; 2024</p>
 	</footer>
 </body>
 </html>
