--- a/family.html
+++ b/family.html
@@ -36,7 +36,7 @@
 			<img src="images/badlands.jpg" width="300" alt="View of the stunning rock formations in Badlands National Park">
 			<img src="images/falling.jpg" width="300" alt="Family standing near a waterfall">
 			<img src="images/rushmore.jpg" width="300" alt="View of Mount Rushmore in South Dakota">
-			<img src="images/jewel_cave.jpg" width="300" alt="Inside the Jewel Cave with breathtaking stalactites and stalagmites">
+			<img src="images/jewel_cave.JPG" width="300" alt="Inside the Jewel Cave with breathtaking stalactites and stalagmites">
 		</div>
 
 		<p>I didn't plan for the fact that the Sturgis Motorcycle Rally would overlap with our trip. Many towns were closed to through traffic, and the lack of internet required that we use paper maps. Often.</p>
